# dyros_mobile_model

./: CMakeLists.txt  README.md  package.xml
data/aml_data/: og_aml_no_mesh.aml  stl_info_no_vertex.yaml  test_out_no_vertex.yaml
data/modified_stl_files/: base_wheel_body.stl  base_wheel_rotate.stl  body_bottom.stl  body_side.stl  body_top.stl  whole_body.stl  whole_wheel.stl
model/: dyros_mobile.urdf  mobile.urdf.xacro  wheel.xacro
model/meshes/: body_bottom.stl  body_side.stl  body_top.stl
scripts/: aml_reader.py  stl_maker.py  stl_modifier.py  stl_modifier_whole.py
