<?xml version="1.0"?>
<package format="2">
  <name>dyros_mobile_model</name>
  <version>0.1.0</version>
  <description>dyros_mobile_model contains URDF files and meshes of dyros mobile robot</description>
  <maintainer email="kimhc37@snu.ac.kr">Kim Hyoung Cheol</maintainer>
  <license>Apache 2.0</license>

  <author>Kim Hyoung Cheol</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
</package>
